hydroflow/tests/compile-fail/surface_lattice_reduce_badgeneric.stderr
error: `lattice_reduce` should have exactly 0 generic type arguments, actually has 1.
 --> tests/compile-fail/surface_lattice_reduce_badgeneric.rs:4:33
  |
4 |             -> lattice_reduce::<'static, usize>()
  |                                 ^^^^^^^^^^^^^^
